--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "iridon0920",
   "license": "ISC",
   "dependencies": {
-    "firebase": "^8.0.2"
+    "firebase": "^8.0.2",
+    "firebase-admin": "^9.4.1"
+  },
+  "devDependencies": {
+    "@firebase/rules-unit-testing": "^1.1.1",
+    "@types/jest": "^26.0.15",
+    "firebase-functions-test": "^0.2.3",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.0.5"
   }
 }
