[追加] firebase-functions-testパッケージを活用したテストパターン
* プロダクションとテストで同じパッケージを共有していないとデータも共有されないため、functions以下に新たにjest環境を導入

--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,8 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "jest"
   },
   "engines": {
     "node": "12"
@@ -24,7 +25,10 @@
     "eslint": "^7.6.0",
     "eslint-plugin-import": "^2.22.0",
     "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^0.2.3",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "@types/jest": "^26.0.15"
   },
   "private": true
 }
