--- a/functions/package.json
+++ b/functions/package.json
@@ -20,15 +20,16 @@
     "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
+    "@firebase/rules-unit-testing": "^1.1.3",
+    "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "^2.22.0",
-    "typescript": "^3.8.0",
     "firebase-functions-test": "^0.2.3",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
-    "@types/jest": "^26.0.15"
+    "typescript": "^3.8.0"
   },
   "private": true
 }
